--- a/Notes.tex
+++ b/Notes.tex
@@ -38,8 +38,7 @@
     
 \chapter*{Introduction}
 \section*{On this document}
-This document are my personal notes on the lecture 01878 Physik der Kondensierten Materie at Uni Basel in the Fall semester 2020.
-I type this document \emph{during} the lectures (while the Proffesors speak) with minimal editing between lectures - there \emph{are A LOT of errors}, spelling mistakes and typos. 
+This document are my personal notes on the lecture 10878 Physik der Kondensierten Materie at Uni Basel in the Fall semester 2020. I type this document during the lectures (while the Professors speak) with minimal editing between lectures - there are A LOT of spelling mistakes, typos and errors of various severity.
 \section*{Information about this Course}
 all lectures online, exercises online Tue 8:15 to 10:00 in two groups\\
 nanophononics.physik.unibas.ch/pages/teaching.htm and adam will hold the presentations\\
